<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MÁV-kép menetrend</string>
    <string name="title_activity_menetrend">Menetrend</string>
    <string name="title_activity_favorites">Kedvencek</string>
    <string name="title_activity_details_list">Részletek</string>
    <string name="title_activity_map">Térkép nézet</string>
    <string name="indulas">Indulás</string>
    <string name="erkezes">Érkezés</string>
    <string name="keresztul">Keresztül</string>
    <string name="utazas_datuma">Dátum</string>
    <string name="kereses">Keresés</string>
    <string name="reszletes_beallitasok">Részletes beállítások</string>
    <string name="budapest_berlet">Budapest bérlet</string>
    <string name="atszallas_nelkul">Átszállás nélkül</string>
    <string name="potjegy_nelkul">Pótjegy nélkül</string>
    <string name="kerekparral">Kerékpárral</string>
    <string name="menetrend_szinkronizalasa">Menetrend szinkronizálása</string>
    <string name="allomasok_szinkronizalasa">Állomások szinkronizálása</string>
    <string name="_tvonal">Útvonal</string>
    <string name="szinkroniz_l_s">Szinkronizálás</string>
    <string name="terkep">Térkép</string>
    <string name="frissites">Frissítés</string>
    <string name="az_indexek_elso_felepitese_a_kesobbi_gyors_elereshez">Az indexek első felépítése a későbbi gyors eléréshez</string>
    <string name="telepites">Telepítés</string>
    <string name="hely_keresese">Hely keresése</string>
    <string name="kerlek_varj">Kérlek várj!</string>
    <string name="kerem_adja_meg_az_indulasi_allomast">Kérem adja meg az indulási állomást!</string>
    <string name="kerem_adja_meg_az_erkezesi_allomast">Kérem adja meg az érkezési állomást!</string>
    <string name="kerem_adja_meg_az_indul_s_helyet_es_a_celallomast">Kérem adja meg a indulás helyét és a célállomást!</string>
    <string name="kerem_adja_meg_az_indulas_helyet">Kérem adja meg a indulás helyét!</string>
    <string name="kerem_adja_meg_a_celallomast">Kérem adja meg a célállomást!</string>
    <string name="az_utvonal_mar_kedvenc">Az útvonal már kedvenc</string>
    <string name="az_uj_kedvenc_elmentve">Az új kedvenc elmentve</string>
    <string name="hiba_tortent">Hiba történt</string>
    <string name="a_gyorsitotar_torolve">A gyorsítótár törölve</string>
    <string name="kozeli_allomosok">Közeli állomások</string>
    <string name="tenyleges">Valós</string>
    <string name="varhato">Várható</string>
    <string name="kedvencekhez_ad">Kedvencekhez ad</string>
    <string name="kedvencek">Kedvencek</string>
    <string name="gyorstar_uritese">Gyorstár ürítése</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Beállítások</string>
    <string name="a_hely_nem_tamogatott">A hely meghatározása nem támogatott ezen a készüléken. Ellenőrízd a beállításokat!</string>
    <string name="a_hely_nem_elerheto">A hely nem elérhető. Ellenőrízd a beállításokat</string>
    <string name="a_hely_atmenetileg_nem_elerheto">A hely átmenetileg nem elérhető.</string>
    <string name="title_activity_local_transfer">Helyi közlekedés</string>
    <string name="nem_sikerult_betolteni_az_adatokat">Nem sikerült betölteni az adatokat</string>
    <string name="nincs_keses">nincs késés</string>
    <string name="keses_d_perc">Késés: %d perc</string>
    <string name="kedvenc_torlese_title">Kedvenc törlése</string>
    <string name="toroljuk_ezt_a_kedvencet">Töröljük ezt a kedvencet?</string>
    <string name="torlom">Törlöm</string>
    <string name="nem">Nem</string>
    <string name="mainactivity_title">MÁV-kép</string>
    <string name="mainactivity_subtitle">Menetrend keresés</string>
    <string name="nem_sikerult_elerni_a_szervert">Nem sikerült elérni a szervert.</string>
    <string name="nem_sikerult_letolteni_az_adatokat">Nem sikerült letölteni az adatokat</string>
    <string name="s_perc_keses">%s perc késés</string>
    <string name="failed_to_load_data_from_server">Failed to load data from server.</string>
    <string name="response_is_null">Response is null</string>
    <string name="nem_sikerult_menteni_a_modositast">Nem sikerült menteni a módosítást</string>
    <string name="a_frissites_folyamatban_van">A frissítés már folyamatban van.</string>
    <string name="menetrend">Elvárt</string>
    <string name="reszletek_frissitese">Részletek frissítése</string>
    <string name="valaszd_ki_a_vonatot">Válaszd ki a vonatot!</string>
    <string name="nem_sikerult_inicializalni_a_terkepet">Nem sikerült inicializálni a térképet</string>							 
</resources>